[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = ""

[workspace]
members = [
  "bin/tempo",
  "bin/tempo-bench",
  "bin/tempo-sidecar",
  "crates/chainspec",
  "crates/consensus",
  "crates/evm",
  "crates/faucet",
  "crates/node",
  "crates/payload",
  "crates/precompiles",
  "crates/contracts",
  "crates/reth-malachite",
  "crates/telemetry-util",
  "crates/transaction-pool",
  "crates/revm",
]

# Resolver 3 is available with edition 2024
resolver = "3"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
tempo-node = { path = "crates/node" }
reth-malachite = { path = "crates/reth-malachite" }
tempo-chainspec = { path = "crates/chainspec" }
tempo-consensus = { path = "crates/consensus" }
tempo-faucet = { path = "crates/faucet" }
tempo-evm = { path = "crates/evm" }
tempo-revm = { path = "crates/revm" }
tempo-payload-builder = { path = "crates/payload" }
tempo-precompiles = { path = "crates/precompiles" }
tempo-contracts = { path = "crates/contracts" }
tempo-telemetry-util = { path = "crates/telemetry-util" }
tempo-transaction-pool = { path = "crates/transaction-pool" }

reth = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5" }

alloy-network = { version = "1.0.23" }
alloy-rpc-types-eth = { version = "1.0.23" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "9d56da5", features = [
  "std",
  "optional-checks",
] }

alloy = { version = "1.0.23", default-features = false }
alloy-evm = "0.20.1"
alloy-consensus = "1.0.23"
alloy-eips = "1.0.23"
alloy-genesis = "1.0.23"
alloy-primitives = "1.3.1"
alloy-rpc-types-engine = "1.0.23"
alloy-signer = "1.0.23"
alloy-signer-local = "1.0.23"
alloy-trie = "0.9.1"
malachitebft-app = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-app" }
malachitebft-app-channel = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-app-channel" }
malachitebft-codec = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-codec" }
malachitebft-core-consensus = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-core-consensus" }
malachitebft-core-types = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-core-types", features = [
  "serde",
] }
malachitebft-signing-ed25519 = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-signing-ed25519", features = [
  "serde",
  "rand",
] }
malachitebft-sync = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-sync" }
malachitebft-proto = { git = "https://github.com/informalsystems/malachite", rev = "0c5a67ffc24b15e2db9d367f4952b350d7fc5415", package = "informalsystems-malachitebft-proto" }
anyhow = "1.0.98"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bytes = "1.8"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6.12"
hex = "0.4"
multiaddr = "0.18"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10"
tempfile = "3.20.0"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
prost = "0.13"
prost-build = "0.13"
protox = "0.7"
criterion = "0.7.0"
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
futures = "0.3"
