[workspace.package]
version = "0.7.4"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
members = [
  "bin/tempo",
  "bin/tempo-bench",
  "bin/tempo-sidecar",
  "crates/alloy",
  "crates/chainspec",
  "crates/commonware-node",
  "crates/commonware-node-config",
  "crates/dkg-onchain-artifacts",
  "crates/consensus",
  "crates/eyre",
  "crates/evm",
  "crates/e2e",
  "crates/faucet",
  "crates/node",
  "crates/payload/builder",
  "crates/payload/types",
  "crates/precompiles",
  "crates/precompiles-macros",
  "crates/primitives",
  "crates/contracts",
  "crates/telemetry-util",
  "crates/transaction-pool",
  "crates/revm",
  "xtask",
]

# Resolver 3 is available with edition 2024
resolver = "3"

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
incremental = true

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
tempo-alloy = { path = "crates/alloy" }
tempo-node = { path = "crates/node" }
tempo-chainspec = { path = "crates/chainspec", default-features = false }
tempo-commonware-node = { path = "crates/commonware-node", default-features = false }
tempo-commonware-node-config = { path = "crates/commonware-node-config", default-features = false }
tempo-consensus = { path = "crates/consensus", default-features = false }
tempo-dkg-onchain-artifacts = { path = "crates/dkg-onchain-artifacts", default-features = false }
tempo-e2e = { path = "crates/e2e" }
tempo-faucet = { path = "crates/faucet", default-features = false }
tempo-evm = { path = "crates/evm", default-features = false }
tempo-eyre = { path = "crates/eyre", default-features = false }
tempo-revm = { path = "crates/revm", default-features = false }
tempo-payload-builder = { path = "crates/payload/builder", default-features = false }
tempo-payload-types = { path = "crates/payload/types", default-features = false }
tempo-precompiles = { path = "crates/precompiles", default-features = false }
tempo-precompiles-macros = { path = "crates/precompiles-macros" }
tempo-primitives = { path = "crates/primitives", default-features = false }
tempo-contracts = { path = "crates/contracts", default-features = false }
tempo-telemetry-util = { path = "crates/telemetry-util", default-features = false }
tempo-transaction-pool = { path = "crates/transaction-pool", default-features = false }

reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7", default-features = false }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7" }

reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "245cca7", features = [
  "std",
  "optional-checks",
] }
revm = { version = "33.1.0", features = ["optional_fee_charge"] }

alloy = { version = "1.1.3", default-features = false }
alloy-consensus = "1.1.3"
alloy-contract = "1.1.3"
alloy-eips = "1.1.3"
alloy-evm = "0.24.2"
alloy-genesis = "1.1.3"
alloy-hardforks = "0.4.5"
alloy-network = { version = "1.1.3"}
alloy-primitives = "1.4.1"
alloy-provider = { version = "1.1.3", default-features = false}
alloy-rlp = "0.3.12"
alloy-rpc-types-engine = "1.1.3"
alloy-rpc-types-eth = { version = "1.1.3"}
alloy-serde = "1.1.3"
alloy-signer = "1.1.3"
alloy-signer-local = "1.1.3"
alloy-sol-types = "1.4.1"
alloy-transport = "1.1.3"

commonware-broadcast = "0.0.63"
commonware-codec = "0.0.63"
commonware-consensus = "0.0.63"
commonware-cryptography = "0.0.63"
commonware-macros = "0.0.63"
commonware-p2p = "0.0.63"
commonware-runtime = "0.0.63"
commonware-storage = "0.0.63"
commonware-utils = "0.0.63"
arbitrary = { version = "1.3", features = ["derive"] }
async-trait = "0.1"
auto_impl = "1"
axum = "0.8.4"
base64 = "0.22"
bytes = "1.8"
clap = { version = "4.5.45", features = ["derive"] }
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
eyre = "0.6.12"
futures = "0.3.31"
governor = "0.10.2"
hex = "0.4"
indexmap = "2.11.0"
indicatif = "0.18"
itertools = "0.14.0"
jiff = { version = "0.2.15", default-features = false }
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
metrics = "0.24.0"
p256 = "0.13"
parking_lot = "0.12.4"
prometheus-client = "0.24.0"
proptest = "1.7"
proptest-arbitrary-interop = "0.1.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10"
tempfile = "3.20.0"
test-fuzz = "7"
thiserror = "2.0.14"
# TODO: restrict this to only the required features
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
criterion = "0.7.0"
test-case = "3"
secp256k1 = "0.30.0"

# build deps
vergen = "9"
vergen-git2 = "1"

[patch.crates-io]
# main branch, right after https://github.com/commonwarexyz/monorepo/pull/2265 was merged
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-macros = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo", rev = "b9740e83dbdacc45acc2dd14fcbaddc2f02e8252" }

#[patch."https://github.com/paradigmxyz/reth"]
#reth-basic-payload-builder = { path = "../reth/crates/payload/basic" }
#reth-chainspec = { path = "../reth/crates/chainspec" }
#reth-cli = { path = "../reth/crates/cli/cli" }
#reth-cli-commands = { path = "../reth/crates/cli/commands" }
#reth-cli-runner = { path = "../reth/crates/cli/runner" }
#reth-cli-util = { path = "../reth/crates/cli/util" }
#reth-codecs = { path = "../reth/crates/storage/codecs" }
#reth-codecs-derive = { path = "../reth/crates/storage/codecs/derive" }
#reth-consensus = { path = "../reth/crates/consensus/consensus" }
#reth-consensus-common = { path = "../reth/crates/consensus/common" }
#reth-db = { path = "../reth/crates/storage/db" }
#reth-db-api = { path = "../reth/crates/storage/db-api" }
#reth-e2e-test-utils = { path = "../reth/crates/e2e-test-utils" }
#reth-engine-local = { path = "../reth/crates/engine/local" }
#reth-engine-primitives = { path = "../reth/crates/engine/primitives" }
#reth-errors = { path = "../reth/crates/errors" }
#reth-eth-wire-types = { path = "../reth/crates/net/eth-wire-types" }
#reth-ethereum = { path = "../reth/crates/ethereum/reth" }
#reth-ethereum-cli = { path = "../reth/crates/ethereum/cli" }
#reth-ethereum-consensus = { path = "../reth/crates/ethereum/consensus" }
#reth-ethereum-engine-primitives = { path = "../reth/crates/ethereum/engine-primitives" }
#reth-ethereum-forks = { path = "../reth/crates/ethereum/hardforks" }
#reth-ethereum-primitives = { path = "../reth/crates/ethereum/primitives" }
#reth-evm = { path = "../reth/crates/evm/evm" }
#reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
#reth-execution-types = { path = "../reth/crates/evm/execution-types" }
#reth-metrics = { path = "../reth/crates/metrics" }
#reth-network = { path = "../reth/crates/net/network" }
#reth-network-peers = { path = "../reth/crates/net/peers" }
#reth-node-api = { path = "../reth/crates/node/api" }
#reth-node-builder = { path = "../reth/crates/node/builder" }
#reth-node-core = { path = "../reth/crates/node/core" }
#reth-node-ethereum = { path = "../reth/crates/ethereum/node" }
#reth-node-metrics = { path = "../reth/crates/node/metrics" }
#reth-payload-builder = { path = "../reth/crates/payload/builder" }
#reth-payload-primitives = { path = "../reth/crates/payload/primitives" }
#reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
#reth-provider = { path = "../reth/crates/storage/provider" }
#reth-revm = { path = "../reth/crates/revm" }
#reth-rpc = { path = "../reth/crates/rpc/rpc" }
#reth-rpc-api = { path = "../reth/crates/rpc/rpc-api" }
#reth-rpc-builder = { path = "../reth/crates/rpc/rpc-builder" }
#reth-rpc-convert = { path = "../reth/crates/rpc/rpc-convert" }
#reth-rpc-eth-api = { path = "../reth/crates/rpc/rpc-eth-api" }
#reth-rpc-eth-types = { path = "../reth/crates/rpc/rpc-eth-types" }
#reth-rpc-server-types = { path = "../reth/crates/rpc/rpc-server-types" }
#reth-storage-api = { path = "../reth/crates/storage/storage-api" }
#reth-tasks = { path = "../reth/crates/tasks" }
#reth-tracing = { path = "../reth/crates/tracing" }
#reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
#reth-trie-db = { path = "../reth/crates/trie/db" }
