[package]
name = "tempo-commonware-node"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-commonware-node-config.workspace = true
tempo-node.workspace = true
tempo-primitives.workspace = true
tempo-payload-types.workspace = true

reth-consensus-common.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true

axum.workspace = true
bytes.workspace = true

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-macros.workspace = true
commonware-p2p.workspace = true
commonware-runtime = { workspace = true, features = ["external"] }
commonware-storage.workspace = true
commonware-utils.workspace = true

eyre.workspace = true
futures.workspace = true
governor.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

prometheus-client.workspace = true
rand.workspace = true
rand_core.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tracing.workspace = true
