[package]
name = "tempo-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec.workspace = true

reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-ethereum-consensus.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true

alloy-consensus.workspace = true
alloy-evm.workspace = true
