[package]
name = "tempo-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "TODO:"

[lints]
workspace = true

[dependencies]
tempo-chainspec.workspace = true
tempo-precompiles.workspace = true
tempo-revm.workspace = true

reth-evm-ethereum.workspace = true

alloy-evm.workspace = true
alloy-primitives.workspace = true
