[package]
name = "tempo-evm"
description = "TODO:"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec.workspace = true
tempo-consensus.workspace = true
tempo-contracts.workspace = true
tempo-payload-types.workspace = true
tempo-primitives.workspace = true
tempo-precompiles.workspace = true
tempo-revm.workspace = true

commonware-cryptography.workspace = true
commonware-codec.workspace = true

reth-consensus.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }

revm.workspace = true
alloy-rlp.workspace = true
alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

derive_more.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
revm.workspace = true

[features]
rpc = ["dep:reth-rpc-eth-api", "tempo-revm/rpc"]
