[package]
name = "tempo-faucet"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Faucet RPC module for dispensing TIP20 tokens"

[lints]
workspace = true

[dependencies]
tempo-precompiles.workspace = true
tempo-transaction-pool.workspace = true
reth-transaction-pool.workspace = true
reth-rpc-server-types.workspace = true
alloy = { workspace = true, features = [
  "rpc-types",
  "signers",
  "signer-local",
  "signer-mnemonic-all-languages",
] }
async-trait.workspace = true
jsonrpsee.workspace = true
clap.workspace = true
thiserror.workspace = true
url = "2.5.4"
