[package]
name = "tempo-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# [lints]
# workspace = true

[dependencies]
tempo-evm.workspace = true
tempo-transaction-pool.workspace = true
reth-malachite.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits = { workspace = true, features = ["secp256k1", "rayon"] }
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network.workspace = true
reth-evm.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-server-types.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-trie-db.workspace = true
reth-rpc-eth-types.workspace = true
reth-node-ethereum.workspace = true
reth-engine-local.workspace = true
reth-engine-primitives.workspace = true
reth-ethereum-consensus.workspace = true
reth-payload-primitives.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
eyre.workspace = true
clap.workspace = true

[dev-dependencies]
tempo-precompiles.workspace = true
reth-ethereum = { workspace = true, features = ["node", "test-utils", "pool"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
alloy = { workspace = true, features = [
  "providers",
  "signers",
  "signer-mnemonic-all-languages",
] }
