[package]
name = "tempo-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tempo-evm.workspace = true
tempo-transaction-pool.workspace = true
tempo-faucet.workspace = true
tempo-chainspec.workspace = true
tempo-consensus.workspace = true
tempo-payload-builder.workspace = true
tempo-precompiles.workspace = true

reth-malachite.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum = { workspace = true, features = ["node", "rpc"] }
reth-ethereum-primitives.workspace = true
reth-primitives-traits = { workspace = true, features = ["secp256k1", "rayon"] }
reth-node-builder.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-builder.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-rpc-eth-types.workspace = true
reth-node-ethereum.workspace = true
reth-engine-local.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
clap.workspace = true
tokio.workspace = true

[dev-dependencies]
tempo-precompiles.workspace = true
reth-ethereum = { workspace = true, features = ["node", "test-utils", "pool"] }
reth-node-core.workspace = true
serde_json.workspace = true
tempo-contracts.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
alloy = { workspace = true, features = [
  "full",
  "providers",
  "signers",
  "signer-mnemonic-all-languages",
] }
rand = "0.9.2"
futures = "0.3"
