[package]
name = "tempo-node"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-evm = { workspace = true, features = ["rpc"] }
tempo-revm.workspace = true
tempo-transaction-pool.workspace = true
tempo-faucet.workspace = true
tempo-chainspec.workspace = true
tempo-consensus.workspace = true
tempo-payload-builder.workspace = true
tempo-payload-types.workspace = true
tempo-precompiles.workspace = true
tempo-primitives.workspace = true

thiserror.workspace = true

reth-ethereum-engine-primitives.workspace = true
reth-ethereum = { workspace = true, features = ["node", "rpc"] }
reth-primitives-traits = { workspace = true, features = ["secp256k1", "rayon"] }
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-convert.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-rpc-eth-types.workspace = true
reth-node-ethereum.workspace = true
reth-engine-local.workspace = true

alloy-serde.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-eth.workspace = true
alloy.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true

async-trait.workspace = true
clap.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
jsonrpsee.workspace = true

[dev-dependencies]
tempo-precompiles.workspace = true
alloy-rpc-types-engine.workspace = true
reth-ethereum = { workspace = true, features = ["node", "test-utils", "pool"] }
reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
serde_json.workspace = true
tempo-contracts.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
alloy = { workspace = true, features = [
    "full",
    "providers",
    "signers",
    "signer-mnemonic-all-languages",
] }
alloy-rlp.workspace = true
rand = "0.9.2"
futures = "0.3"
test-case.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
sha2 = { workspace = true }
base64.workspace = true

[build-dependencies]
vergen.workspace = true
vergen-git2.workspace = true

[features]
default = []
asm-keccak = [
    "alloy/asm-keccak",
    "alloy-primitives/asm-keccak",
    "reth-node-core/asm-keccak",
    "reth-node-ethereum/asm-keccak",
]
